--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -24,6 +24,13 @@
   "user": {
     "barcode": {
       "is-not-mobile": "Esta opción está disponible únicamente en dispositivos móviles."
+    },
+    "progress": {
+      "category": {
+        "CATEGORY_BEGINNER": "Principiante",
+        "CATEGORY_INTERMEDIATE": "Intermedio",
+        "CATEGORY_ADVANCED": "Avanzado"
+      }
     }
   }
 }
